[project]
name = "bq-pg-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec[gcs]>=2025.12.0",
    "google-adk>=1.21.0",
    "google-cloud-aiplatform>=1.130.0",
    "opentelemetry-exporter-gcp-logging>=1.11.0a0",
    "opentelemetry-exporter-gcp-monitoring>=1.11.0a0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-instrumentation-google-genai>=0.5b0",
    "opentelemetry-instrumentation-sqlite3>=0.58b0",
    "opentelemetry-instrumentation-vertexai>=0.48.1",
]
